--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
   <link href="https://fonts.googleapis.com/css?family=Arvo|Roboto" rel="stylesheet">
   <!-- GSAP for page animations -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+  <!-- pull in socketio -->
+  <script src='/socket.io/socket.io.js'></script>
   <!-- client bundle -->
   <script src='assets/js/bundle.js' type='text/javascript'></script>
 </head>
@@ -17,8 +19,8 @@
       <input type='button' id='join-button' value='Join' />
     </div>
     <div id='connect-controls'>
-      <input type='text' id='room-input' placeholder='Room Name' />
-      <input type='text' id='user-input' placeholder='Display Name' />
+      <input type='text' id='name-input' placeholder='Display Name' />
+      <input type='text' id='room-input' placeholder='Room Code' />
       <input type='button' id='connect-button' value='Connect' />
       <input type='button' id='back-button' value='Back' />
     </div>
