Changed color scheme

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- Home Page -->
   <div id='landing-screen'>
-    <h1>ID8</h1>
+    <img id='logo' src='assets/img/logo.png' alt='id8' />
     <div id='landing-controls'>
       <input type='button' id='make-button' value='Create' />
       <input type='button' id='join-button' value='Join' />
@@ -21,6 +21,7 @@
     <div id='connect-controls'>
       <input type='text' id='name-input' placeholder='Display Name' />
       <input type='text' id='room-input' placeholder='Room Code' />
+      <div id='break'></div>
       <input type='button' id='connect-button' value='Connect' />
       <input type='button' id='back-button' value='Back' />
     </div>
