Added sidebar that pops in and out

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,16 @@
       <input type='button' id='back-button' value='Back' />
     </div>
   </div>
+
+  <!-- board -->
   <div id='board'></div>
+
+  <!-- menu -->
+  <div id='sidebar'>
+    <div id='sidebar-break'></div>
+    <ul id='options'>
+      <li><img src='assets/img/menu-icon.png' id='menu-icon' class='sidebar-button' alt='Open Menu' /></li>
+    </ul>
+  </div>
 </body>
 </html>
