Changed icon for menu out button

--- a/client/index.html
+++ b/client/index.html
@@ -32,9 +32,7 @@
   <!-- menu -->
   <div id='sidebar'>
     <div id='sidebar-break'></div>
-    <ul id='options'>
-      <li><img src='assets/img/menu-icon.png' id='menu-icon' class='sidebar-button' alt='Open Menu' /></li>
-    </ul>
+    <div id='menu-button'><h1>></h1></div>
   </div>
 </body>
 </html>
