Got rid of noteDragged method

--- a/client/index.html
+++ b/client/index.html
@@ -31,12 +31,13 @@
 
   <!-- menu -->
   <div id='sidebar'>
+    <div id='sidebar-break'></div>
     <div id='menu-button'><h1>></h1></div>
     <input name='copy-room-code' type='text' readonly id='copy-room-code' />
     <p>Room Code</p>
 
     <ul id='user-list'>
-      
+
     </ul>
   </div>
 </body>
