Optimized drawing (setInterval to 30 instead of requestAnimationFrame) and only send drag note emits every 10 drag events

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <!-- board -->
-  <div id='board'></div>
+  <div id='board'><h1 class='tip'>Double click anywhere to add a note</h1></div>
 
   <!-- menu -->
   <div id='sidebar'>
