Added room code screen before board shows

--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,14 @@
     </div>
   </div>
 
+  <div id='room-code-display'>
+    <h1>Share this code with the people you want to join your board</h1>
+    <input type='text' id='display-code' readonly />
+    <input type='button' id='go-button' value='Go To Board' />
+  </div>
+
+
+
   <!-- board -->
   <div id='board'><h1 class='tip'>Double click anywhere to add a note</h1></div>
 
