Added disconnect handling

--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,12 @@
     <input type='button' id='go-button' value='Go To Board' />
   </div>
 
-
+  <div id='server-disconnect-error'>
+    <div id='disconnect-dialog'>
+      <h1>The host disconnected, this board is no longer active</h1>
+      <input type='button' id='error-dialog-button' value='OK' />
+    </div>
+  </div>
 
   <!-- board -->
   <div id='board'><h1 class='tip'>Double click anywhere to add a note</h1></div>
